--- a/css/estilo.css
+++ b/css/estilo.css
@@ -35,8 +35,7 @@
 }
 
 /* NÃO ALTERE DAQUI PRA CIMA */
-
-
+/* 1 */
 #layout {
   display: flex;
   justify-content: center;
@@ -63,3 +62,103 @@
   background-color: #666;
 }
 
+/* 2 */
+
+#layout {
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+  height: 60vh;
+  gap: 10px;
+  margin-top: 40px;
+}
+
+.quadrado {
+  width: 60px;
+  color: black;
+  font-size: 12px;
+  text-align: center;
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+}
+
+.b1 {
+  height: 20vh;
+  background-color: #bbb;
+}
+
+.b2 {
+  height: 30vh;
+  background-color: #888;
+}
+
+.b3 {
+  height: 15vh;
+  background-color: #bbb;
+}
+
+.b4 {
+  height: 35vh;
+  background-color: #888;
+}
+
+.b5 {
+  height: 50vh;
+  background-color: #bbb;
+}
+
+.b6 {
+  height: 20vh;
+  background-color: #888;
+}
+
+/* 3 */
+
+#layout {
+  display: flex;
+  flex-wrap: wrap;
+  height: 70vh;
+  font-family: sans-serif;
+}
+
+.cabecalho {
+  background-color: #f8d7da;
+  border: 1px solid #000;
+  width: 66.66%;
+  height: 100px;
+  padding: 10px;
+}
+
+.menu {
+  background-color: #f1c1d1;
+  border: 1px solid #000;
+  width: 33.33%;
+  height: 200px;
+  padding: 10px;
+}
+
+.artigo1 {
+  background-color: #e0e0e0;
+  border: 1px solid #000;
+  width: 33.33%;
+  height: 100px;
+  padding: 10px;
+}
+
+.artigo2 {
+  background-color: #f5f5f5;
+  border: 1px solid #000;
+  width: 33.33%;
+  height: 100px;
+  padding: 10px;
+}
+
+.rodape {
+  background-color: #ffffff;
+  border: 1px solid #000;
+  width: 100%;
+  height: 80px;
+  padding: 10px;
+  text-align: center;
+}
