--- a/css/estilo.css
+++ b/css/estilo.css
@@ -65,100 +65,128 @@
 /* 2 */
 
 #layout {
-  display: flex;
-  justify-content: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 80vh; 
+}
+
+.bloco {
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-start;
+    color: #1c1b1b;
+    font-weight: normal;
+    background-color: #888;
+    width: 300px;
+}
+
+.height20 {
+    height: 20vh;
+    background-color: #a0a0a0;
+}
+
+.height-30 {
+    height: 30vh;
+    background-color: #707070;
+}
+
+.height-15 {
+    height: 15vh;
+    background-color: #a0a0a0;
+}
+
+.height-35 {
+    height: 35vh;
+    background-color: #707070;
+}
+
+.height-50 {
+    height: 50vh;
+    background-color: #a0a0a0;
+}
+
+.height-20 {
+    height: 20vh;
+    background-color:#707070;
+}
+
+
+.align {
+    align-self: center;
+}
+
+/* 3*/
+
+                        
+.l3 {
+     width: 1000px;
+     display: flex;
+     flex-direction:column;
+     height:90vh;  
+     margin-top:200px;
+    
+    }
+
+.l3 .vermelhocima {                                   
+    display: flex;                                           
+    height: 300px;                           
+    background-color: red; 
+ }
+
+                                                    
+.l3 .verdeesquerdo {
+                                                      
+  display: flex;                                                   
+  flex-direction: column;                                                  
+  flex: 2;                                                      
+}
+
+                                                          
+.l3 .azulcima {
+                                                           
+  background-color: lightblue;                                                           
+  flex: 1;                                                            
+  display: flex;                                                               
+  align-items:center;                                                                  
+  padding:20px;                                                                                                                                   
+}
+
+                                                                      
+.l3 .azulbaixo {
+                                                                       
+  display: flex;                                                                     
+  flex: 1;                                                                       
+}
+
+                                                                          
+.l3 .amarelo {
+                                                                           
+  flex: 1;                                                                          
+  background-color: yellow;                                                                                                       
+  display: flex;                                                                               
+  align-items: flex-start;                                                                                 
+  padding: 20px;                                                                                  
+}
+
+                                                                                     
+.l3 .verdedireito {
+                                                                                        
+  flex: 1;                                                                                      
+  background-color: green;                                                                                       
+  display: flex;                                                                                            
+  align-items: flex-start;                                                                                              
+  justify-content: center;                                                                                               
+  padding: 20px;                                                                                                                                                                                                  
+}
+                                                                                                  
+.l3 .vermelhobaixo {                                                                                                  
+  background-color: darkred;                                                                                                  
+  display:flex;                                                                                                   
+  flex-direction:column;                                                                                              
+  padding:20px;
   align-items: flex-end;
-  height: 60vh;
-  gap: 10px;
-  margin-top: 40px;
-}
+  justify-content: flex-end;                                                                                               
 
-.quadrado {
-  width: 60px;
-  color: black;
-  font-size: 12px;
-  text-align: center;
-  display: flex;
-  align-items: flex-start;
-  justify-content: center;
-}
-
-.b1 {
-  height: 20vh;
-  background-color: #bbb;
-}
-
-.b2 {
-  height: 30vh;
-  background-color: #888;
-}
-
-.b3 {
-  height: 15vh;
-  background-color: #bbb;
-}
-
-.b4 {
-  height: 35vh;
-  background-color: #888;
-}
-
-.b5 {
-  height: 50vh;
-  background-color: #bbb;
-}
-
-.b6 {
-  height: 20vh;
-  background-color: #888;
-}
-
-/* 3 */
-
-#layout {
-  display: flex;
-  flex-wrap: wrap;
-  height: 70vh;
-  font-family: sans-serif;
-}
-
-.cabecalho {
-  background-color: #f8d7da;
-  border: 1px solid #000;
-  width: 66.66%;
-  height: 100px;
-  padding: 10px;
-}
-
-.menu {
-  background-color: #f1c1d1;
-  border: 1px solid #000;
-  width: 33.33%;
-  height: 200px;
-  padding: 10px;
-}
-
-.artigo1 {
-  background-color: #e0e0e0;
-  border: 1px solid #000;
-  width: 33.33%;
-  height: 100px;
-  padding: 10px;
-}
-
-.artigo2 {
-  background-color: #f5f5f5;
-  border: 1px solid #000;
-  width: 33.33%;
-  height: 100px;
-  padding: 10px;
-}
-
-.rodape {
-  background-color: #ffffff;
-  border: 1px solid #000;
-  width: 100%;
-  height: 80px;
-  padding: 10px;
-  text-align: center;
-}
+  }
